<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="@string/key_setting_title"
        android:title="@string/action_settings" >
        <ListPreference
            android:enabled="false"
            android:key="@string/key_setting_select_btdevice"
            android:title="@string/select_btdevice" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:enabled="false"
            android:key="@string/key_setting_auto_start"
            android:title="@string/auto_start" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/key_setting_autoenable_bluetooth"
            android:title="@string/setting_autoenable_bluetooth" />

        <Preference
            android:key="@string/key_setting_support_me"
            android:summary="@string/support_me_hint"
            android:title="@string/support_me" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/key_notify_title"
        android:title="@string/warning_method" >
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/warning_option_string"
            android:entryValues="@array/warning_option_value"
            android:key="@string/key_notify_audio"
            android:title="@string/warning_audio" />
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/warning_option_string"
            android:entryValues="@array/warning_option_value"
            android:key="@string/key_notify_vibrate"
            android:title="@string/warning_vibrate" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:enabled="false"
            android:key="@string/key_notify_popwindow"
            android:title="@string/warning_popwinodw" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:enabled="false"
            android:key="@string/key_notify_screen"
            android:title="@string/warning_screen" />

        <ListPreference
            android:defaultValue="0"
            android:enabled="false"
            android:entries="@array/warning_option_string"
            android:entryValues="@array/warning_option_value"
            android:key="@string/key_notify_flash"
            android:title="@string/warning_flash" />
    </PreferenceCategory>

</PreferenceScreen>